css/home.scss
---
---

header.home {
  position: relative;
  background: url(../img/circle.png) no-repeat center center, url(../img/background.png) repeat;
  background-color:#eeeded;
  width: 100%;
  height: 257px;
  text-align: center;

  h1 {
    position: absolute;
    top: 50%;
    left: 50%;
    margin-top: -75px;
    margin-left: -167px;
    padding: 5px 19px;
    font-weight: 100;
    font-size: 46px;
    color: #fff;
    max-width: 100%;
    background-color: #ffb800;
  }

  img {
    position: absolute;
    top:100px;
    left:50%;
    margin-left: -202px;
  }
}

.home-container {
  padding:0;
  margin: 0 8px 0 8px;
  justify-content: center;
}

.home-container > div {
  width: 25%;
  float: left;
  background-color: #fafafa;
  box-sizing: border-box;
  padding-bottom: 15px;
  border-style: solid;
  border-color: #fff;
  border-width: 16px 8px 0 8px;
  height:268px;
  &:hover {
    border-bottom:3px solid #ffb800;
    
    &:hover .stepNumber {
      background-color: #ffb800;
      color:#fff;
    }
  }
  
  .stepNumber {
    color:#323232;
    text-align: center;
    height: 50px;
    background-color: #f3f3f3;
    font-size: 18px;
    line-height: 50px;
  }
  
  a.action {
    .stepPic {
      height: 96px;
      width: 96px;
      background-position: 0 0;
      margin-left: auto;
      margin-right: auto;
      margin-top: 15px;
      margin-bottom: 20px;
    }
    
    display: block;
    width: 100%;
    color: #555555;
    font-weight: 700;
    line-height: 1.5;
    text-align:center;
    &:hover {
      color: #555;
    }
  }
  
  .stepPic {
    &.model {
      background-image: url(../img/pic_model.png);
    }
    &.prototype {
      background-image: url(../img/pic_prototype.png);
    }
    &.webApp {
      background-image: url(../img/pic_webApp.png);
    }
    &.mobileApp {
      background-image: url(../img/pic_mobileApp.png);
    }
  }
  
}


section .blocks {
  float: left;
  width: 420px;
}

@media print, screen and(max-width: 1060px) {
  section {
    .getting-started {
      margin-top:5px;
      width: 360px;
    }
    .step {
      width: 160px;
    }
  }

  .home {
    display: none;
  }

  .home-container > div {
        width: 50%;
  }
}

